data/derived/sp14/progs/unify/prog2372.ml.out
Characters 21-33:
  let _ = stringOfList (fun x -> x) ["foo"];;
                       ^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
string
